# captive_portal_rust

./: Cargo.toml  README.md  USER_AUTH.RS  captive_portal_option_parse.rs  commandline_option_parser.rs  distro_maker_v_01.sh  dns_configurator.rs  login_redirect_generator.rs  main.rs  noodle_tail.rs  oui_select.py  threadpoo.rs
lists/: ouilist.cleaned  portlist  portlist.csv  readme.md
