[package]
name = "portal"
version = "0.1.0"
authors = ["moop"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termcolor = "1.1.0" 
clap = "2.33.0"
scoped_threadpool = "0.1.*"
jsonwebtoken = "6"
# 0.4.0
bcrypt = "0.6.1"
chrono = { version = "0.4.6", features = ["serde"] }
csrf-token = { git = "ssh://git@github.com/3dom-co-jp/csrf-token.git"}
